8362
(Comments originally lodged, accidentally, on SI-6337)

A play-by-play in the REPL:
```scala
scala> class X[T](val i: T) extends AnyVal
defined class X

scala> object a { def y[T](x: X[T]) = x.i }
defined module a

scala> val t = a.y(new X(0))
t: Int = 0

scala> val t = (a: {def y[T](x: X[T]): T}).y(new X(0))
warning: there were 1 feature warnings; re-run with -feature for details
java.lang.ClassCastException: X cannot be cast to java.lang.Integer
```

A very similar problem: methods with erased value classes as parameters can't be invoked with reflection.
```scala
scala> class X[T](val i: T) extends AnyVal
defined class X

scala> object a { def y[T](x: X[T]) = x.i }
defined module a

scala> val cm = reflect.runtime.currentMirror
cm: reflect.runtime.universe.Mirror = JavaMirror with scala.tools.nsc.interpreter.IMain$TranslatingClassLoader@4bcc946b of type class scala.tools.nsc.interpreter.IMain$TranslatingClassLoader with classpath [(memory)] and parent being scala.tools.nsc.util.ScalaClassLoader$URLClassLoader@642423ad of type class scala.tools.nsc.util.ScalaClassLoader$URLClassLoader with classpath [file:/Library/Java/JavaVirtualMachines/1.6.0_27-b07-395.jdk/Contents/Classes/classes.jar,file:/Library/Java/JavaVirtualMachines/1.6.0_27-b07-395.jdk/Contents/Classes/ui.jar,file:/Library/Java/JavaVirtualMachines/1.6.0_27-b07-395.jdk/Contents/Classes/jsse.jar,file:/Library/Java/JavaVirtualMachines/1.6.0_27-b07-395.jdk/Contents/Classes/jce.jar,file:/Library/Java/JavaVirtualMachines/1.6.0_27-b07-395.jdk/Contents/Class...
scala> val moduleA = cm.reflect(a)
moduleA: reflect.runtime.universe.InstanceMirror = instance mirror for a$@6ff64801

scala> val methodY = moduleA.symbol.typeSignature.declarations.last.asMethod
methodY: reflect.runtime.universe.MethodSymbol = method y

scala> moduleA.reflectMethod(methodY)
res10: reflect.runtime.universe.MethodMirror = method mirror for a.y[T](x: X[T]): T (bound to a$@6ff64801)

scala> res10(new X(0))
java.lang.NoClassDefFoundError: no Java class corresponding to ErasedValueType(X[T]) found
	at scala.reflect.runtime.JavaMirrors$JavaMirror.typeToJavaClass(JavaMirrors.scala:1160)
```


Currently, method signatures that accept value classes are compiled to accept the unboxed type:
```scala
scala> class X(val i: Int) extends AnyVal
defined class X

scala> class C1 { def foo(x: X) = x.i * 2 }
defined class C1

scala> :javap C1
Compiled from "<console>"
public class C1 extends java.lang.Object{
    public int foo(int);
    public C1();
}
```

The compiler unboxes the X at the call site (and eliminates allocation of a new X, where possible). But for reflective callers, this never happens.

It seems to me that both problems would be solved if we left the signatures unmolested, and created a shadow method that accepts the unboxed value:
```scala
public class C1 extends java.lang.Object{
    public int foo(X)
    public int foo$unboxed(int);
    public C1();
}
```

The first method would delegate to the second, and the compiler would endeavour to call the second directly where possible. This would parallel the way that a specialized method can still be called from a generic call site.

It would also avoid double definition errors like:
```scala

scala> class C3 { def foo(x: X) = x.i * 2; def foo(i: Int) = i * 2 }
<console>:11: error: double definition:
method foo:(i: Int)Int and
method foo:(x: X)Int at line 11
have same type after erasure: (i: Int)Int
       class C3 { def foo(x: X) = x.i * 2; def foo(i: Int) = i * 2 }
                                               ^
```
